--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         </nav>
     </header>
     <section class="section-1">
-        <div>
-            <h3 id="ancre_presentation">PRESENTATION</h3>
-            <p class="filigrane1">QUI SUIS-JE ?</p>
+        <div class="container-filigrane1">
+            <div class="filigrane1">QUI SUIS-JE ?</div>
+            <h3 class="dessus1" id="ancre_presentation">PRESENTATION</h3>
         </div>
         <hr>
         <p>
             <b><i>Développeur passionné</i></b> dans le domaine du web epuis plus de 6ans, actuellement <b><i>développeur Web.</i></b><br>
-            JE conçois et réalise des sites web du cahier des charges à la mise en ligne. Je développe aussi en <b>JAVA</b>, ce qui me permet de développer des applications mobiles android.
+            Je conçois et réalise des sites web du cahier des charges à la mise en ligne. Je développe aussi en <b>JAVA</b>, ce qui me permet de développer des applications mobiles android.
         </p>
         <p>
             J'ai quelques projets intéréssants <a href="">à voir.</a><br>
@@ -45,9 +45,9 @@
         </p>
     </section>
     <section class="section-2">
-        <div>
-            <h3 id="ancre_realisation">MES TRAVAUX</h3>
-            <p class="filigrane2">PORTFOLIO</p>
+        <div class="container-filigrane2">
+            <div class="filigrane2">PORTFOLIO</div>
+            <h3 class="dessus2" id="ancre_realisation">MES TRAVAUX</h3>
         </div>
         <hr>
         <ul>
@@ -69,9 +69,9 @@
         </div>
     </section>
     <section class="section-3">
-        <div id="ancre_activite">
-            <p>AVANT DE VOULOIR QU'UN LOGICIEL SOIT RÉUTILISABLE, IL FAUDRAIT D'ABORD QU'IL AIT ÉTÉ UTILISABLE.</p>
-            <p class="filigrane3">SERVICES</p>
+        <div class="container-filigrane3" id="ancre_activite">
+            <div class="filigrane3">SERVICES</div>
+            <h3 class="dessus3">AVANT DE VOULOIR QU'UN LOGICIEL SOIT RÉUTILISABLE, IL FAUDRAIT D'ABORD QU'IL AIT ÉTÉ UTILISABLE.</h3>
         </div>
         <hr>
         <div class="gallerie-icon">
@@ -88,40 +88,40 @@
         <div class="section-4-right">
             <div id="ancre_competences">
                 <h3>MES COMPÉTENCES À VOTRE SERVICE</h3>
-                <p>A PROPOS</p>
+                <p class="filigrane4">A PROPOS</p>
             </div>
             <hr>
-            <div>
-                <div>
-                    <p><img src="images/img_techno_1.png" alt=""></p>
+            <div class="container-techno">
+                <div class="container-techno1">
+                    <p><img src="images/img_techno_1.png" alt="">HTML5</p>
+                    
+                </div>
+                <div class="container-techno2">
+                    <p><img src="images/img_techno_2.png" alt="">CSS3</p>
                     <p></p>
                 </div>
-                <div>
-                    <p><img src="images/img_techno_2.png" alt=""></p>
+                <div class="container-techno3">
+                    <p><img src="images/img_techno_3.png" alt="">PHP</p>
                     <p></p>
                 </div>
-                <div>
-                    <p><img src="images/img_techno_3.png" alt=""></p>
+                <div class="container-techno4">
+                    <p><img src="images/img_techno_4.png" alt="">WORDPRESS</p>
                     <p></p>
                 </div>
-                <div>
-                    <p><img src="images/img_techno_4.png" alt=""></p>
+                <div class="container-techno5">
+                    <p><img src="images/img_techno_5.png" alt="">MYSQL</p>
                     <p></p>
                 </div>
-                <div>
-                    <p><img src="images/img_techno_5.png" alt=""></p>
+                <div class="container-techno6">
+                    <p><img src="images/img_techno_6.png" alt="">JAVA</p>
                     <p></p>
                 </div>
-                <div>
-                    <p><img src="images/img_techno_6.png" alt=""></p>
+                <div class="container-techno7">
+                    <p><img src="images/img_techno_7.png" alt="">SYNPHONY</p>
                     <p></p>
                 </div>
-                <div>
-                    <p><img src="images/img_techno_7.png" alt=""></p>
-                    <p></p>
-                </div>
-                <div>
-                    <p><img src="images/img_techno_8.png" alt=""></p>
+                <div class="container-techno8">
+                    <p><img src="images/img_techno_8.png" alt="">JAVASCRIPT</p>
                     <p></p>
                 </div>
             </div>
@@ -135,24 +135,24 @@
         <hr>
         <form id="ancre_contact" action="">
             <div>
-                <input type="text" placeholder="Nom">
+                <input type="text" placeholder="Nom" class="nom">
             </div>
             <div>
-                <input type="text" placeholder="Adresse e-mail">
+                <input type="text" placeholder="Adresse e-mail" class="mail">
             </div>
             <div>
-                <input type="text" placeholder="Votre message">
+                <input type="text" placeholder="Votre message" class="message">
             </div>
             <div>
-                <button type="button">ME CONTACTER</button>
+                <button type="button" class="button">ME CONTACTER</button>
             </div>
         </form>
     </section>
     <footer>
         <ul>
-            <li><a href="images/img_footer_1.png"><img src="" alt=""></a></li>
-            <li><a href="images/img_footer_2.png"><img src="" alt=""></a></li>
-            <li><a href="images/img_footer_3.png"><img src="" alt=""></a></li>
+            <li><a href=""><img src="images/img_footer_1.png" alt=""></a></li>
+            <li><a href=""><img src="images/img_footer_2.png" alt=""></a></li>
+            <li><a href=""><img src="images/img_footer_3.png" alt=""></a></li>
         </ul>
         <h4>© 2022 Gael MANZOLA, Tous droits réservés.</h4>
     </footer>
