--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </nav>
     </header>
     <section class="section-1">
-        <div class="container-filigrane1">
-            <div class="filigrane1">QUI SUIS-JE ?</div>
-            <h3 class="dessus1" id="ancre_presentation">PRESENTATION</h3>
+        <div class="container-filigrane">
+            <div class="filigrane">QUI SUIS-JE ?</div>
+            <h3 class="dessus" id="ancre_presentation">PRESENTATION</h3>
         </div>
         <hr>
         <p>
@@ -45,9 +45,9 @@
         </p>
     </section>
     <section class="section-2">
-        <div class="container-filigrane2">
-            <div class="filigrane2">PORTFOLIO</div>
-            <h3 class="dessus2" id="ancre_realisation">MES TRAVAUX</h3>
+        <div class="container-filigrane">
+            <div class="filigrane">PORTFOLIO</div>
+            <h3 class="dessus" id="ancre_realisation">MES TRAVAUX</h3>
         </div>
         <hr>
         <ul>
@@ -69,9 +69,9 @@
         </div>
     </section>
     <section class="section-3">
-        <div class="container-filigrane3" id="ancre_activite">
-            <div class="filigrane3">SERVICES</div>
-            <h3 class="dessus3">AVANT DE VOULOIR QU'UN LOGICIEL SOIT RÉUTILISABLE, IL FAUDRAIT D'ABORD QU'IL AIT ÉTÉ UTILISABLE.</h3>
+        <div class="container-filigrane" id="ancre_activite">
+            <div class="filigrane">SERVICES</div>
+            <h3 class="dessus">AVANT DE VOULOIR QU'UN LOGICIEL SOIT RÉUTILISABLE, IL FAUDRAIT D'ABORD QU'IL AIT ÉTÉ UTILISABLE.</h3>
         </div>
         <hr>
         <div class="gallerie-icon">
@@ -86,51 +86,67 @@
     <section class="section-4">
         <div class="section-4-left"><img src="images/img_techno.jpg" alt=""></div>
         <div class="section-4-right">
-            <div id="ancre_competences">
-                <h3>MES COMPÉTENCES À VOTRE SERVICE</h3>
-                <p class="filigrane4">A PROPOS</p>
+            <div class="container-filigrane" id="ancre_competences">
+                <h3 class="dessus">MES COMPÉTENCES À VOTRE SERVICE</h3>
+                <div class="filigrane">A PROPOS</div>
             </div>
             <hr>
             <div class="container-techno">
-                <div class="container-techno1">
-                    <p><img src="images/img_techno_1.png" alt="">HTML5</p>
-                    
+                <div class="techno1">
+                    <div class="techno1-barre">
+                        <div><img src="/images/img_techno_1.png" alt="">HTML</div>
+                        <div>94%</div>
+                    </div>
                 </div>
-                <div class="container-techno2">
-                    <p><img src="images/img_techno_2.png" alt="">CSS3</p>
-                    <p></p>
+                <div class="techno2">
+                    <div class="techno2-barre">
+                        <div><img src="/images/img_techno_2.png" alt="">CSS</div>
+                        <div>94%</div>
+                    </div>
                 </div>
-                <div class="container-techno3">
-                    <p><img src="images/img_techno_3.png" alt="">PHP</p>
-                    <p></p>
+                <div class="techno3">
+                    <div class="techno3-barre">
+                        <div><img src="/images/img_techno_3.png" alt="">PHP</div>
+                        <div>90%</div>
+                    </div>
                 </div>
-                <div class="container-techno4">
-                    <p><img src="images/img_techno_4.png" alt="">WORDPRESS</p>
-                    <p></p>
+                <div class="techno4">
+                    <div class="techno4-barre">
+                        <div><img src="/images/img_techno_4.png" alt="">WORDPRESS</div>
+                        <div>80%</div>
+                    </div>
                 </div>
-                <div class="container-techno5">
-                    <p><img src="images/img_techno_5.png" alt="">MYSQL</p>
-                    <p></p>
+                <div class="techno5">
+                    <div class="techno5-barre">
+                        <div><img src="/images/img_techno_5.png" alt="">MYSQL</div>
+                        <div>75%</div>
+                    </div>
                 </div>
-                <div class="container-techno6">
-                    <p><img src="images/img_techno_6.png" alt="">JAVA</p>
-                    <p></p>
+                <div class="techno6">
+                    <div class="techno6-barre">
+                        <div><img src="/images/img_techno_6.png" alt="">JAVA</div>
+                        <div>70%</div>
+                    </div>
                 </div>
-                <div class="container-techno7">
-                    <p><img src="images/img_techno_7.png" alt="">SYNPHONY</p>
-                    <p></p>
+                <div class="techno7">
+                    <div class="techno7-barre">
+                        <div><img src="/images/img_techno_7.png" alt="">SYMFONY</div>
+                        <div>70%</div>
+                    </div>
                 </div>
-                <div class="container-techno8">
-                    <p><img src="images/img_techno_8.png" alt="">JAVASCRIPT</p>
-                    <p></p>
+                <div class="techno8">
+                    <div class="techno8-barre">
+                        <div><img src="/images/img_techno_8.png" alt="">JAVASCRIPT</div>
+                        <div>70%</div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="section-5">
-        <div>
-            <h3>DÉMARRONS UN PROJET ENSEMBLE, N'HÉSITEZ PAS À ME CONTACTER</h3>
-            <p>CONCTACT</p>
+        <div class="container-filigrane"> 
+            <h3 class="dessus">DÉMARRONS UN PROJET ENSEMBLE, N'HÉSITEZ PAS À ME CONTACTER</h3>
+            <div class="filigrane">CONCTACT</div>
         </div>
         <hr>
         <form id="ancre_contact" action="">
