--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <section class="section-5">
         <div class="container-filigrane"> 
             <h3 class="dessus">DÉMARRONS UN PROJET ENSEMBLE, N'HÉSITEZ PAS À ME CONTACTER</h3>
-            <div class="filigrane">CONCTACT</div>
+            <div class="filigrane">CONTACT</div>
         </div>
         <hr>
         <form id="ancre_contact" action="">
